[gd_scene load_steps=5 format=3 uid="uid://c8en2cnu2xtw"]

[ext_resource type="Script" path="res://ui/pause.gd" id="1_tbf03"]
[ext_resource type="PackedScene" uid="uid://dxwf2q00iathx" path="res://scenes/options.tscn" id="2_x0304"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_obg3c"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kh8p2"]
bg_color = Color(0.207843, 0.207843, 0.207843, 0.741176)

[node name="pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_tbf03")

[node name="colorContainer" type="MarginContainer" parent="."]

[node name="Panel" type="Panel" parent="colorContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_obg3c")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kh8p2")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
process_mode = 3
layout_mode = 2

[node name="title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Pause"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="statsScore" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Score = "

[node name="statsHigh" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "High Score = "

[node name="resume" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="options" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "options"

[node name="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer" instance=ExtResource("2_x0304")]
layout_mode = 2

[node name="stats" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "stats"

[node name="statText" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Fuel picked up:
Coins picked up:
Hearts picked up:
Diamonds picked up:"

[node name="return" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "return to main menu"

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/stats" to="." method="_on_stats_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/return" to="." method="_on_return_pressed"]
